--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +9,103 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: indianred;
+}
+
+header{
+  background-color: indianred;
+  width: 100%;
+  padding: 1em;
+  text-align: center;
+  font-size: 0.9rem;
+  color: white;
+  border-radius: 0 0 25px 25px;
+  border-bottom: solid 5px white;
+}
+
+#quote-box{
+  border: solid 5px white;
+  border-radius: 10px;
+  width: 80%;
+  margin: 0 auto;
+  padding: 1em;
+  margin-top: 30%;
+  max-width: 750px;
+}
+
+@media (min-width: 600px){
+  #quote-box{
+    margin-top: 20%;
+  }
+}
+
+@media (min-width: 950px){
+  #quote-box{
+    margin-top: 15%;
+  }
+}
+
+@media (min-width: 1050px){
+  #quote-box{
+    margin-top: 10%;
+  }
+}
+
+#text{
+  font-size: 1.5rem;
+  font-weight: 700;
+  background-color: white;
+  padding: 1em;
+  color: indianred;
+}
+
+#author{
+  font-size: 1.25rem;
+  font-weight: 300;
+  background-color: white;
+  color: indianred;
+  text-align: right;
+  margin-top: -1px;
+  padding: 1em;
+  letter-spacing: 1px;
+}
+
+#buttons{
+  background-color: white;
+  padding: 1em;
+  display: flex;
+  justify-content: space-between;
+}
+
+#tweet-quote{
+  text-decoration: none;
+  display: block;
+  background-color: indianred;
+  padding: 0.5em;
+  border-radius: 5px;
+  color: white;
+  font-size: 1rem;
+  outline: none;
+}
+
+#new-quote{
+  background-color: indianred;
+  padding: 0 0.5rem;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  color: white;
+  font-size: 1rem;
+  outline: none;
+}
+
+#tweet-quote:hover
+{
+  opacity: 0.5;
+}
+
+#new-quote:hover
+{
+  opacity: 0.5;
 }
